[project]
name = "awesome-beancount"
version = "0.1.0"
description = "A curated list of resources for Beancount, which is a command-line based double-entry bookkeeping system."
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "mkdocs>=1.6.1",
 "mkdocs-material>=9.5.50",
 "mkdocs-static-i18n>=1.3.0",
]
